new box animate

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -22,6 +22,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "../www/lib/ionic/scss/ionic";
 
 $long:100px;
+$border-color:#444;
 
 @mixin make-centre{
 
@@ -51,7 +52,10 @@ $long:100px;
   height: $long;
   width: $long;
   border: 2px solid;
-  border-color: #444;
+  border-color: $border-color;
   z-index: 10;
+
+  transition: -webkit-transform 1s;
+
 }
 
