--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -8908,6 +8908,7 @@ $ios-transition-box-shadow-end: -200px 0px 200px rgba(0,0,0,0.15), -5px 0px 5px 
   width: 100px;
   border: 2px solid;
   border-color: #444;
-  z-index: 10; }
+  z-index: 10;
+  transition: -webkit-transform 1s; }
 
 /*# sourceMappingURL=ionic.app.css.map */
